<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/selectableItemBackground">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/my_awesome_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="10dp"
        android:minHeight="?attr/actionBarSize" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_items_height"
        android:id="@+id/surname"
        android:background="?android:attr/selectableItemBackground"
        android:elegantTextHeight="true"
        android:drawableLeft="@drawable/ic_account_circle_black_24dp"
        android:text="@string/welcome_surname"
        android:textAllCaps="false"
        android:drawablePadding="@dimen/activity_horizontal_medium_margin"
        android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_short_margin"
        android:visibility="visible"
        android:layout_below="@+id/my_awesome_toolbar"
        android:layout_alignParentStart="true" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/surname"
        android:background="#BDBDBD" />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:layout_alignParentStart="true"
        android:background="@color/transparent"
        android:elegantTextHeight="true"
        android:hint="@string/edit_text_hint"
        android:textAlignment="center"
        android:maxHeight="200dp"
        android:paddingLeft="@dimen/activity_horizontal_short_margin"
        android:paddingRight="10dp"
        android:paddingTop="@dimen/activity_horizontal_short_margin"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_above="@+id/verona_color_button"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#BDBDBD"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <!--<EditText
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_items_height"
            android:layout_gravity="center_horizontal"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/drawable_descr_24dp"
            android:drawablePadding="@dimen/activity_horizontal_medium_margin"
            android:elegantTextHeight="true"
            android:hint="@string/title_editor_text"
            android:maxLines="1"
            android:paddingLeft="@dimen/activity_horizontal_short_margin" />

        <TextView
            android:id="@+id/title_example_text"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/list_items_height"
            android:layout_marginLeft="@dimen/activity_horizontal_long_margin"
            android:gravity="left|center_vertical"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" /> -->
    </LinearLayout>

    <Button
        android:id="@+id/account_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_items_height"
        android:background="?android:attr/selectableItemBackground"
        android:drawableLeft="@drawable/ic_event_black_36dp"
        android:singleLine="true"
        android:text="@string/account_button_string"
        android:textAllCaps="false"
        android:drawablePadding="@dimen/activity_horizontal_medium_margin"
        android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_short_margin"
        android:layout_below="@+id/dialog_container"
        android:layout_alignParentStart="true" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#BDBDBD"
        android:layout_alignBottom="@+id/account_button"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/verona_color_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_items_height"
        android:background="?android:attr/selectableItemBackground"
        android:drawableLeft="@drawable/circle_orange_24dp"
        android:drawablePadding="@dimen/activity_horizontal_medium_margin"
        android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_short_margin"
        android:text="@string/verona_event_color_string"
        android:focusable="true"
        android:layout_below="@+id/account_button"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/bassona_color_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_items_height"
        android:background="?android:attr/selectableItemBackground"
        android:drawableLeft="@drawable/circle_orange_24dp"
        android:drawablePadding="@dimen/activity_horizontal_medium_margin"
        android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_short_margin"
        android:text="@string/bassona_event_color_string"
        android:layout_below="@+id/verona_color_button"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:text="Visualizza l'evento RECUPERO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recoveryDay"
        android:layout_below="@+id/bassona_color_button"
        android:gravity="left|center_vertical"
        android:paddingLeft="28dp"
        android:layout_marginLeft="12dp"/>

    <RelativeLayout
        android:id="@+id/dialog_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/edit_text"
        android:layout_alignStart="@+id/recoveryDay">

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#BDBDBD"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/paste_text"
            android:background="#BDBDBD" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete_button"
            android:drawableLeft="@drawable/ic_cancel_black_36dp"
            android:gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:layout_toEndOf="@+id/paste_text" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/paste_text"
            android:drawableLeft="@drawable/ic_content_paste_black_36dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:id="@+id/import_text_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_note_add_black_36dp"
            android:gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/paste_text"/>

    </RelativeLayout>

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/foward_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginRight="@dimen/activity_horizontal_short_margin"
        android:src="@drawable/ic_play_arrow_white_24dp"
        fab:fab_colorNormal="@color/red_500"
        fab:fab_colorPressed="@color/red_500"
        fab:fab_colorRipple="@color/red_A700"
        fab:fab_shadow="true"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="22dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
